# rpy

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Cargo.toml  README.md
.github/workflows/: release.yaml  rust.yml
src/: args.rs  main.rs  rpy.rs
test_data/: pyproject.toml
test_data/bin_path/: badger.sh  pyproject.toml
test_data/canonicalize/: badger.sh  binlink  prerun.sh  pyproject.toml
test_data/pre_run/: badger.sh  pyproject.toml
test_data/rel_interp/: badger.sh  pyproject.toml
test_data/simple/: badger.sh  pyproject.toml
test_data/source_root/: badger.sh  pyproject.toml
tests/: rpy.rs
