[package]
name = "rpy"
version = "0.2.1"
edition = "2018"
description = "Run the appropriate python interpreter in the right way"
authors = ["Matt Godbolt <matt.godbolt@aquatic.com>"]
readme = "README.md"
repository = "https://github.com/aquanauts/rpy"
keywords = ["python", "launcher"]
license-file = "LICENSE.md"
categories = ["command-line-utilities"]

[dependencies]
eyre = "0.6.6"
color-eyre = "0.6.0"
toml = "0.5.9"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.4"

[profile.release]
# Tweaked to get smaller binaries
opt-level = "s"
lto = "fat"
